<resources>
    <string name="app_name">DigiPass</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">LOVE MUSIC</string>
    <string name="backdrop_subtitle">This season top 20 albums</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="tv_recycler_item_1">Swipe down to refresh</string>
    <string name="tv_recycler_item_2">Swipe left or right to dismiss it</string>
    <string name="tv_recycler_item_3">Drag up or down to move it</string>
    <string name="share_view_press_it">You can press it</string>
    <string name="item_swipe_dismissed">Dismissed</string>
    <string name="item_swipe_undo">Undo</string>
    <string name="no_more_data">No more data</string>
    <string name="log_out_user">Log out user</string>


    <!-- String related to Login -->
    <string name="title_activity_login">Login</string>
    <string name="login_user_name_hint">phone or email</string>
    <string name="login_user_name_password">password</string>
    <string name="action_sign_in">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register">Register</string>
    <string name="error_invalid_name">Invalid user name</string>
    <string name="error_invalid_password">At least 4 characters</string>
    <string name="error_incorrect_password">Incorrect password</string>
    <string name="error_no_name">Input your phone or email</string>
    <string name="error_no_password">Input your password</string>
    <string name="snackbar_forgot_password">Oh oh !</string>
    <string name="snackbar_register">Oh oh !</string>

</resources>
